- Created pokemon Repository, service and DTO class - Created getAllPokemon and createPokemon APIs
- Created get,update,delete pokemon API
- Created Exception handling
- Added Paging to getAllPokemon API